--- a/index.html
+++ b/index.html
@@ -1,56 +1,91 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>DMaker Tech</title>
-    <link rel="stylesheet" href="css/style.css">
-    <script src="js/js.js" charset="utf-8"></script>
-    <script src="js/fontawesome.js" charset="utf-8"></script>
-  </head>
-  <body>
-    <div class="menu" id="menuid">
-        <a href="#home" class="active">Inici</a>
-        <a href="#news">Projecte</a>
-        <a href="#contact">Contacts</a>
-        <a href="#about">Qui som</a>
-        <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-          <i class="fa fa-bars"></i>
-        </a>
-    </div>
+<html>
+<head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="css/style.css">
+<script src="js/javascript.js" charset="utf-8"></script>
+<script src="js/fontawesome.js" charset="utf-8"></script>
+</head>
+<body>
+  <div class="menu" id="menuid">
+      <a href="index.html" class="active">Inici</a>
+      <a href="prejecte">Projecte</a>
+      <a href="contacts">Contacts</a>
+      <a href="quisom">Qui som</a>
+      <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+        <i class="fa fa-bars"></i>
+      </a>
+  </div>
 
-    <!-- Slideshow container -->
-    <div class="slideshow-container">
+<header>
 
-      <!-- Full-width images with number and caption text -->
-      <div class="mySlides fade">
-        <div class="numbertext">1 / 3</div>
-        <img src="images/proyecto1.jpg" style="width:100%">
-        <div class="text">Caption Text</div>
-      </div>
+  <div class="container">
 
-      <div class="mySlides fade">
-        <div class="numbertext">2 / 3</div>
-        <img src="images/proyecto2.jpg" style="width:100%">
-        <div class="text">Caption Two</div>
-      </div>
+    <div class="diapositivas quitar">
+      <div class="numbertext">1 / 3</div>
+      <img src="images/proyecto1.svg" style="width:100%">
+  </div>
 
-      <div class="mySlides fade">
-        <div class="numbertext">3 / 3</div>
-        <img src="images/proyecto3.jpg" style="width:100%">
-        <div class="text">Caption Three</div>
-      </div>
+  <div class="diapositivas quitar">
+    <div class="numbertext">2 / 3</div>
+    <img src="images/proyecto2.svg" style="width:100%">
+  </div>
 
-      <!-- Next and previous buttons -->
-      <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-      <a class="next" onclick="plusSlides(1)">&#10095;</a>
-    </div>
-    <br>
+<div class="diapositivas quitar">
+  <div class="numbertext">3 / 3</div>
+  <img src="images/proyecto3.svg" style="width:100%">
+</div>
 
-    <!-- The dots/circles -->
-    <div style="text-align:center">
-      <span class="dot" onclick="currentSlide(1)"></span>
-      <span class="dot" onclick="currentSlide(2)"></span>
-      <span class="dot" onclick="currentSlide(3)"></span>
-    </div>
-  </body>
+<a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+<a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+</div>
+<br>
+
+<div style="text-align:center">
+  <span class="dot" onclick="currentSlide(1)"></span>
+  <span class="dot" onclick="currentSlide(2)"></span>
+  <span class="dot" onclick="currentSlide(3)"></span>
+</div>
+
+</header>
+<script>
+/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+function myFunction() {
+  var x = document.getElementById("menuid");
+  if (x.className === "menu") {
+    x.className += " responsive";
+  } else {
+    x.className = "menu";
+  }
+}
+
+var slideIndex = 1;
+showSlides(slideIndex);
+
+function plusSlides(n) {
+  showSlides(slideIndex += n);
+}
+
+function currentSlide(n) {
+  showSlides(slideIndex = n);
+}
+
+function showSlides(n) {
+  var i;
+  var slides = document.getElementsByClassName("diapositivas");
+  var dots = document.getElementsByClassName("dot");
+  if (n > slides.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = slides.length}
+  for (i = 0; i < slides.length; i++) {
+      slides[i].style.display = "none";
+  }
+  for (i = 0; i < dots.length; i++) {
+      dots[i].className = dots[i].className.replace(" active", "");
+  }
+  slides[slideIndex-1].style.display = "block";
+  dots[slideIndex-1].className += " active";
+}
+</script>
+</body>
 </html>
