--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
 
 </header>
 <script>
-/* Toggle between adding and removing the "responsive" class to topnav when the user clicks on the icon */
+
+/*Scrip en HTML prueba*/
+
 function myFunction() {
   var x = document.getElementById("menuid");
   if (x.className === "menu") {
